dxscale/sales/callItems/objects/Call_Item__c/fields/Active_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Start_Date__c</fullName>
    <label>Active Start Date</label>
    <type>Date</type>
</CustomField>