dxscale/sales/callItems/objects/Call_Item__c/fields/Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment__c</fullName>
    <description>EAD-1251 Collections Enhancements for Call Items (updated by the sales/collections person)</description>
    <label>Additional Comment</label>
    <length>60</length>
    <type>Text</type>
</CustomField>