dxscale/sales/callItems/objects/Call_Item__c/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <description>EAD-1251 Collections Enhancements for Call Items  (updated by the sales/collections person)</description>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>