dxscale/sales/callItems/objects/Call_Item__c/fields/Amount_to_Collect__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Collect__c</fullName>
    <description>EAD-1251 Collections Enhancements for Call Items (Sales Opps agreed they would updated this information when lists are being loaded)</description>
    <label>Amount to Collect</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>