dxscale/sales/callItems/objects/Call_Item__c/fields/Archive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Archive_Reason__c</fullName>
    <label>Archive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_Reasons__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>call list completed</fullName>
                <label>Call List Completed</label>
            </value>
            <value>
                <fullName>campaign finished</fullName>
                <label>Campaign Finished</label>
            </value>
            <value>
                <fullName>no longer working call list</fullName>
                <label>No Longer Working List</label>
            </value>
            <value>
                <fullName>Customer Data Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>