dxscale/sales/callItems/objects/Call_Item__c/fields/ArchivedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchivedDate__c</fullName>
    <description>To capture the date when the call list is archived CCORE-1912</description>
    <label>Archived Date</label>
    <type>Date</type>
</CustomField>