dxscale/sales/callItems/objects/Call_Item__c/fields/Attempted_Calls__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Automatically counts comes from CTI 
JIRA-CCORE-1653</description>
    <label>Attempted Calls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>