dxscale/sales/callItems/objects/Call_Item__c/fields/Call_Item_Country__c.field-meta.xml
<CustomField>
    <fullName>Call_Item_Country__c</fullName>
    <formula>Text(Account__r.Local_CRM_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Item Country</label>
    <type>Text</type>
</CustomField>