dxscale/sales/callItems/objects/Call_Item__c/fields/CallItemOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>CallItemOwnerRole__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Item Owner Role</label>
    <type>Text</type>
</CustomField>