dxscale/sales/callItems/objects/Call_Item__c/fields/CallItemRegion__c.field-meta.xml
<CustomField>
    <fullName>CallItemRegion__c</fullName>
    <formula>Text(Account__r.Local_CRM_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Item Region</label>
    <type>Text</type>
</CustomField>