dxscale/sales/callItems/objects/Call_Item__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign that relates to CallList/Calltem
JIRA-CCORE-1653</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Call Items</relationshipLabel>
    <relationshipName>Call_Items</relationshipName>
    <type>Lookup</type>
</CustomField>