dxscale/sales/callItems/objects/Call_Item__c/fields/Hint__c.field-meta.xml
<CustomField>
    <fullName>Hint__c</fullName>
    <description>Additional Information Captured against the callitem by sales opps
JIRA-CCORE-1653</description>
    <label>Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>