dxscale/sales/callItems/objects/Call_Item__c/fields/Id_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Id_18_digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (18 digit)</label>
    <type>Text</type>
</CustomField>