dxscale/sales/callItems/objects/Call_Item__c/fields/Is_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Month__c</fullName>
    <description>NOT SURE THIS FIELD IS REQUIRED
JIRA-CCORE-1653</description>
    <formula>MONTH(TODAY()) = MONTH( Target_Finish_Date__c ) &amp;&amp;  YEAR(TODAY()) = YEAR( Target_Finish_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To support the filitering with the list view</inlineHelpText>
    <label>Is Current Month</label>
    <type>Checkbox</type>
</CustomField>