dxscale/sales/callItems/objects/Call_Item__c/fields/Is_My_Direct_Report__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Direct_Report__c</fullName>
    <description>To support to see all  call item records under my team
JIRA-CCORE-1653</description>
    <formula>Owner:User.ManagerId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Direct Report</label>
    <type>Checkbox</type>
</CustomField>