dxscale/sales/callItems/objects/Call_Item__c/fields/isOpenedByOwner__c.field-meta.xml
<CustomField>
    <fullName>isOpenedByOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checks this box when user opens the callitem  JIRA-CCORE-1653</description>
    <label>is Opened By Owner</label>
    <type>Checkbox</type>
</CustomField>