dxscale/sales/callItems/objects/Call_Item__c/fields/isVisibilityStatusSetManually__c.field-meta.xml
<CustomField>
    <fullName>isVisibilityStatusSetManually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Tracking Visibility Status that was updated manually</description>
    <label>isVisibilityStatusSetManually</label>
    <type>Checkbox</type>
</CustomField>