dxscale/sales/callItems/objects/Call_Item__c/fields/Local_CRM_AccountID__c.field-meta.xml
<CustomField>
    <fullName>Local_CRM_AccountID__c</fullName>
    <description>For upload only! Used to map local account id to a Salesforce Account in an upload process. Name of field matches equivalent field on Account object. JIRA-CCORE-1653</description>
    <inlineHelpText>For upload only! Used to map local account id to a Salesforce Account in an upload process. Name of field matches equivalent field on Account object.</inlineHelpText>
    <label>Local CRM AccountID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>