dxscale/sales/callItems/objects/Call_Item__c/fields/Number_of_Account_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Account_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of callable contacts on the Account
JIRA-CCORE-1653</description>
    <label>Number of Account Contacts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>