dxscale/sales/callItems/objects/Call_Item__c/fields/Promised_Paid__c.field-meta.xml
<CustomField>
    <fullName>Promised_Paid__c</fullName>
    <description>EAD-1251 Collections Enhancements for Call Items (updated by the sales/collections person)</description>
    <label>Promised Paid Date</label>
    <type>Date</type>
</CustomField>