dxscale/sales/callItems/objects/Call_Item__c/fields/Status_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Status_Reasons__c</fullName>
    <label>Status Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AD - Collections - Contact Made - Debt Not Cleared - De-link notification sent</fullName>
            </value>
            <value>
                <fullName>AD - Collections - No Contact Made - Canx Sub - De-link notification sent</fullName>
            </value>
            <value>
                <fullName>Already Actioned</fullName>
                <isActive>false</isActive>
                <label>Already Actioned</label>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
            <value>
                <fullName>BP - Collections - Contact Made - Debt Not Cleared - Cancellation notification sent</fullName>
            </value>
            <value>
                <fullName>BP - Collections - No Contact Made - Canx Sub - Cancelation notification sent</fullName>
            </value>
            <value>
                <fullName>Cancelled Subs – Debt Cleared</fullName>
                <isActive>false</isActive>
                <label>Cancelled Subs – Debt Cleared</label>
            </value>
            <value>
                <fullName>Cancelled Subs – Debt Outstanding</fullName>
                <isActive>false</isActive>
                <label>Cancelled Subs – Debt Outstanding</label>
            </value>
            <value>
                <fullName>Collections - Cancelled Subs - Debt Cleared</fullName>
                <isActive>false</isActive>
                <label>Collections - Cancelled Subs - Debt Cleared</label>
            </value>
            <value>
                <fullName>Collections - Cancelled Subs – Debt Cleared</fullName>
            </value>
            <value>
                <fullName>Collections - Cancelled Subs - Debt Outstanding</fullName>
                <isActive>false</isActive>
                <label>Collections - Cancelled Subs - Debt Outstanding</label>
            </value>
            <value>
                <fullName>Collections - Cancelled Subs – Debt Outstanding</fullName>
            </value>
            <value>
                <fullName>Collections - Contact Made - Debt Cleared - Payment Holiday</fullName>
            </value>
            <value>
                <fullName>Collections - Contact Made - Debt Cleared - Sub Active</fullName>
            </value>
            <value>
                <fullName>Collections - Not Contact - Cont. Debt chased</fullName>
                <isActive>false</isActive>
                <label>Collections - Not Contact - Cont. Debt chased</label>
            </value>
            <value>
                <fullName>Collections - Not Contact – Cont. Debt chased</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <isActive>false</isActive>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Customer happy with current solution</fullName>
                <isActive>false</isActive>
                <label>Customer happy with current solution</label>
            </value>
            <value>
                <fullName>Customer Opt Out or Telephone Preference Service</fullName>
            </value>
            <value>
                <fullName>Data cleanse / Call Complete</fullName>
                <isActive>false</isActive>
                <label>Data cleanse / Call Complete</label>
            </value>
            <value>
                <fullName>Data Team - Cleanse/ Call Complete</fullName>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
                <isActive>false</isActive>
                <label>Functionality</label>
            </value>
            <value>
                <fullName>Incorrect Segment</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>No Longer Trading</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
                <isActive>false</isActive>
                <label>No Opportunity</label>
            </value>
            <value>
                <fullName>Not Contact – Cont Debt chased</fullName>
                <isActive>false</isActive>
                <label>Not Contact – Cont Debt chased</label>
            </value>
            <value>
                <fullName>Outsourcing</fullName>
                <isActive>false</isActive>
                <label>Outsourcing</label>
            </value>
            <value>
                <fullName>Passed to alternative channel</fullName>
                <isActive>false</isActive>
                <label>Passed to alternative channel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>