dxscale/sales/callItems/objects/Call_Item__c/fields/Target_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Finish_Date__c</fullName>
    <description>Date set by sales Opp to specify the end date of callitem JIRA-CCORE-1653</description>
    <label>Target Finish Date</label>
    <type>Date</type>
</CustomField>