dxscale/sales/callItems/objects/Call_Item__c/fields/Visibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Status__c</fullName>
    <label>Visibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>