dxscale/sales/callItems/objects/Call_Item__c/validationRules/Converted_Must_Have_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_Must_Have_Opportunity</fullName>
    <active>true</active>
    <description>You can only set a Call Item to &quot;Converted&quot; if it has an associated Opportunity</description>
    <errorConditionFormula>AND(
 $Setup.CallItemControlSwtich__c.Run_Validation_Rules__c,
 ISPICKVAL (Status__c, &quot;Converted&quot;),
 ISBLANK( Opportunity__c ) 
)</errorConditionFormula>
    <errorMessage>You can only set a Call Item to &quot;Converted&quot; if it has an associated Opportunity</errorMessage>
</ValidationRule>