dxscale/sales/callItems/objects/Call_Item__c/validationRules/Status_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Converted</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$Setup.CallItemControlSwtich__c.Run_Validation_Rules__c,
ISCHANGED(Status__c) ,
ISPICKVAL(PRIORVALUE(Status__c),&quot;Converted&quot;)
)</errorConditionFormula>
    <errorMessage>&quot;Converted&quot; is a final status, you cannot change this to another value</errorMessage>
</ValidationRule>