dxscale/sales/callItems/objects/Call_Item__c/validationRules/Status_MissingContact.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_MissingContact</fullName>
    <active>true</active>
    <description>Can&apos;t move to stage beyond Missing Contact if no contact assigned.</description>
    <errorConditionFormula>AND(
$Setup.CallItemControlSwtich__c.Run_Validation_Rules__c, 
ISBLANK( Contact__c ) , 
OR ( 
ISPICKVAL(Status__c,&quot;To Be Actioned&quot;), 
ISPICKVAL(Status__c,&quot;Working&quot;), 
ISPICKVAL(Status__c,&quot;Converted&quot;) 
) 
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please select a Contact before working this call item</errorMessage>
</ValidationRule>