dxscale/sales/callItems/objects/Call_Item__c/validationRules/Status_NotAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_NotAccepted</fullName>
    <active>false</active>
    <description>Status Reason is mandatory when the status is changed to Not Accepted</description>
    <errorConditionFormula>AND(
$Setup.CallItemControlSwtich__c.Run_Validation_Rules__c, 
ISCHANGED(Status__c),  
Text(Status__c) = &quot;Not Accepted&quot;,
ISBLANK(Text( Status_Reasons__c)) 
 )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Status Reason is mandatory when the status is changed to Not Accepted,</errorMessage>
</ValidationRule>