dxscale/sales/callItems/objects/Call_Item__c/validationRules/Update_Not_Allowed_on_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Not_Allowed_on_Account</fullName>
    <active>true</active>
    <description>Account should not be changed once it is loaded. No exclusions for any users including sys admins.</description>
    <errorConditionFormula>AND(ISCHANGED(Account__c), NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account should not be changed once it is loaded.</errorMessage>
</ValidationRule>