dxscale/sales/callItems/objects/Call_Item__c/listViews/All_Teams_All_Call_Items.listView-meta.xml
<ListView>
    <fullName>All_Teams_All_Call_Items</fullName>
    <columns>Call_List_Name__c</columns>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Status_Reasons__c</columns>
    <columns>Hint__c</columns>
    <columns>Attempted_Calls__c</columns>
    <columns>isOpenedByOwner__c</columns>
    <columns>Active_Start_Date__c</columns>
    <columns>Target_Finish_Date__c</columns>
    <columns>Visibility_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>jo.edwards@sage.com</value>
    </filters>
    <label>All Teams All Call Items</label>
    <sharedTo>
        <group>Call_List_Sales_Director_Users</group>
        <group>Call_List_Sales_Operational_Users</group>
    </sharedTo>
</ListView>